# plug

./: stack.yaml
plug-client/: plug-client.cabal
plug-client/src/: Common.hs
plug-client/src/Web/: Widgets.hs
plug-client/src/Web/Channel/: Client.hs
plug-client/src/Web/Channel/Client/: Cache.hs
plug-client/src/Web/Channel/Client/Cache/: ReadWrite.hs
plug-client/src/Web/Widgets/: Autocomplete.hs  DragAndDrop.hs  Edit.hs  Modal.hs  Multi.hs  Paginate.hs  RichText.hs  Upload.hs
plug-common/: plug-common.cabal
plug-common/src/Data/: Change.hs
plug-common/src/Web/: Channel.hs
plug-server/: plug-server.cabal
plug-server/src/Web/Channel/: Server.hs
plug-server/src/Web/Channel/Server/: Session.hs
