name:                plug-client
version:             0.1.0.0
synopsis:            
  Client libraries for the plug system.
-- description:         
-- license:             
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Web.Channel.Client
    Web.Channel.Client.Cache
    Web.Channel.Client.Cache.ReadWrite
    Web.Widgets
    Web.Widgets.DragAndDrop
    Web.Widgets.Modal
    Web.Widgets.Multi
    Web.Widgets.Paginate
    Web.Widgets.RichText
    Web.Widgets.Upload
  other-modules:
    Common
  build-depends:
    base >= 4.8 && < 4.10
    , base64-bytestring >= 1.0 && < 1.1
    , bytestring >= 0.10 && < 0.11
    , cereal >= 0.5 && < 0.6
    , containers >= 0.5 && < 0.6
    , Coroutine >= 0.2 && < 0.3
    , exception-transformers >= 0.4 && < 0.5
    , focus >= 0.1.4 && < 0.2
    , ghcjs-base >= 0.2 && < 0.3
    , ghcjs-dom >= 0.2.3 && < 0.9
    , ghcjs-websockets-reflex >= 0.1 && < 0.2
    , hashable >= 1.2.3 && < 1.3
    , lens >= 4.12 && < 4.15
    , mtl >= 2.2 && < 2.3
    -- For instance lifting in Web.Widgets
    , monad-control >= 1.0.1.0 && < 1.1
    , plug-common >= 0.1 && < 0.2
    , ref-tf >= 0.4 && < 0.5
    , reflex >= 0.3 && < 0.6
    , reflex-dom >= 0.2 && < 0.5
    , reflex-dom-contrib >= 0.4 && < 0.6
    , safecopy >= 0.9 && < 0.10
    , stm >= 2.4.4 && < 2.5
    , stm-containers >= 0.2.10 && < 0.3
    , text >= 1.2 && < 1.3
    , transformers >= 0.4 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    ScopedTypeVariables
