name:                plug-common
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Change
    Web.Channel
  build-depends:
    base >= 4.8 && < 4.10
    , bytestring >= 0.10 && < 0.11
    , containers >= 0.5  && < 0.6
    , Coroutine  >= 0.2  && < 0.3
    , ID         >= 0.1  && < 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
