name:                plug-server
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  exposed-modules:
    Web.Channel.Server
    Web.Channel.Server.Session
  build-depends:
    base >= 4.8 && < 4.9
    , base64-bytestring >= 1.0 && < 1.1
    , bytestring >= 0.10 && < 0.11
    , cereal >= 0.4 && < 0.6
    , containers >= 0.5 && < 0.6
    , cookie >= 0.4 && < 0.5
    , Coroutine >= 0.2 && < 0.3
    , http-types
    , mtl >= 2.2 && < 2.3
    , network-uri >= 2.6 && < 2.7
    , oauth2-google >= 0.1 && < 0.2
    , plug-common >= 0.1 && < 0.2
    -- only for debugging
    , random >= 1.1 && < 1.2
    , safecopy >= 0.9 && < 0.10
    , serversession >= 1.0 && < 1.1
    , serversession-backend-acid-state >= 1.0 && < 1.1
    , serversession-frontend-wai >= 1.0 && < 1.1
    , text >= 1.2 && < 1.3
    , threads >= 0.5 && < 0.6
    , transformers
    , vault >= 0.3 && < 0.4
    , wai-session >= 0.3 && < 0.4
    , wai-util >= 0.8 && < 0.9
    , wai-websockets
    , wai >= 3.0 && < 3.3
    , websockets >= 0.9.6 && < 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    ScopedTypeVariables
